client/src/app/dropdown/dropdown.component.css
.list {
    position: fixed;
    /* left: calc(100vw - 175px); */
    list-style-type: none;
    margin: 5px;
    background-color: white;
    border: 1px solid black;
    border-radius: 5px;
}

.list > li {
    min-width: 150px;
    padding: 2px;
    border-bottom: 1px solid grey;
}

.list > li:hover {
    background-color: lightgray;
    transition: all .25s;
}

.list-button {
    outline: none;
    border: none;
    background-color: #ffffff00;
    width: 25px;
    height: 25px;
    border-radius: 50%;

    display: flex;
    align-items: center;
    justify-content: center;
}

.list-button:hover {
    background-color: lightgrey;
    transition: all .25s;
}

